Ozhaev Zaynudin Game.cpp.g++log.txt
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:395:0: error: unterminated argument list invoking macro "txLoadImage"
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp: In function 'void MoveBall()':
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:84:24: error: expected '}' at end of input
     Pictures Photo  = {txLoadImage ("Pictures\\Fon.bmp", txLoadImage ("Pictures\\Ball.bmp")};
                        ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:84:24: error: cannot convert 'HDC__* (*)(const char*, int, int, unsigned int, unsigned int)' to 'HDC' in initialization
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:84:24: error: expected ',' or ';' at end of input
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:63:10: warning: unused variable 'ball1' [-Wunused-variable]
     Ball ball1 = { W/2 + rand() % W/2 ,  rand() % H, 0, 0,
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:69:10: warning: unused variable 'ball2' [-Wunused-variable]
     Ball ball2 = { rand() % W/2,  rand() % H, 0, 0,
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:75:10: warning: unused variable 'ball3' [-Wunused-variable]
     Ball ball3 = { W/2,  rand() % H, -10 + rand() % 20, -10 + rand() % 20,
          ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:81:9: warning: unused variable 'plaer1' [-Wunused-variable]
     Key plaer1 = { VK_LEFT, VK_RIGHT, VK_UP, VK_DOWN };
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:82:9: warning: unused variable 'plaer2' [-Wunused-variable]
     Key plaer2 = { 'A', 'D', 'W', 'S' };
         ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:84:14: warning: unused variable 'Photo' [-Wunused-variable]
     Pictures Photo  = {txLoadImage ("Pictures\\Fon.bmp", txLoadImage ("Pictures\\Ball.bmp")};
              ^
C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp:84:24: error: expected '}' at end of input
     Pictures Photo  = {txLoadImage ("Pictures\\Fon.bmp", txLoadImage ("Pictures\\Ball.bmp")};
                        ^
---------------------------------------------------------------------------------------------
[04.07.2021 11:12:52,40 C:\Users\zainu@DESKTOP-ZAINU, returned 1]
C:\Users\zainu\Desktop\курс\Game> g++.exe "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.cpp" -o "C:\Users\zainu\Desktop\курс\Game\Ozhaev Zaynudin Game.exe"  -Wshadow -Winit-self -Wredundant-decls -Wcast-align -Wundef -Wfloat-equal -Winline -Wunreachable-code -Wmissing-declarations -Wmissing-include-dirs -Wswitch-enum -Wswitch-default -Weffc++ -Wmain -Wextra -Wall -g -pipe -fexceptions -Wcast-qual -Wconversion -Wctor-dtor-privacy -Wempty-body -Wformat-security -Wformat=2 -Wignored-qualifiers -Wlogical-op -Wmissing-field-initializers -Wnon-virtual-dtor -Woverloaded-virtual -Wpointer-arith -Wsign-promo -Wstack-usage=8192 -Wstrict-aliasing -Wstrict-null-sentinel -Wtype-limits -Wwrite-strings -D_DEBUG -D_EJUDGE_CLIENT_SIDE -D_EJC
